--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ ehthumbs.db
 # Folder config file
 Desktop.ini
 
+JsonGetter/App.config
+JsonGetter/bin/*
+
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
